--- a/CHANGES
+++ b/CHANGES
@@ -2,14 +2,26 @@ In this file we record the changes since the 3.xxx versions of the ACE
 package. Also look at gap/CHANGES  for  a  history  of  the  pre-3.xxx
 development.
 
-Version 5.2 (2016-XX-YY)
+#To Do in Version 5.3/5.4
+#  o Fix bug that appeared with GAP 4.5, and hence at the time of ACE 5.1,
+#    where the order options are put to ACE is no longer respected. The 
+#    original coding of ACE exploited an undocumented feature of record 
+#    fields, namely that their ordering was fixed in versions of GAP <=4.4.
+#  o Convert documentation to be GAPDoc-generated.
+#
+Version 5.2 (2016-03-11)
    Mainly cosmetic changes to improve compatibility with GAP 4.7.
    o LICENSE (new file)
      - All parts of ACE (including the GAP package, and the original C
        standalone executable) are now licensed under the so-called MIT 
        license. For details, refer to the LICENSE file.
+   o README,doc/{ace,options,moreexamples}.tex
+     - Notes about bug - see `To Do' above - placed in above files.
+       In documentation these are in sections 1.11, 4.4, C.1 (ahead of
+       example dated Wed Oct 31 09:41:14 2001)
    o PackageInfo.g,doc/install.tex
      - Max Horn listed as co-maintainer.
+     - Now list dependence as requiring GAP version >= 4.7.
    o PackageInfo.g,doc/{{ace,install}.tex,manual.bib},src/al[012].h,
      src/{ace,coinc,control,enum,enum0[012],parser,postproc,util[012]}.c
      - updated email address for Colin Ramsay, and web address for 
