--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,11 @@ development.
 #    fields, namely that their ordering was fixed in versions of GAP <=4.4.
 #  o Convert documentation to be GAPDoc-generated.
 #
+
+Version 5.3 (2019-MM-DD)
+   o Increase default workspace from 10^6 to 10^8 words
+   o ...
+
 Version 5.2 (2016-03-11)
    Mainly cosmetic changes to improve compatibility with GAP 4.7.
    o LICENSE (new file)
