--- a/doc/install.tex
+++ b/doc/install.tex
@@ -18,7 +18,7 @@
 \Section{Installing the ACE Package}
 
 To install, unpack the archive file, which should have a name of  form
-`ace-<XXX>.zoo'  for  some  package  version  number   <XXX>,   as   a
+`ace-<XXX>.tar.gz'  for  some  package  version  number   <XXX>, as  a
 sub-directory in the `pkg' hierarchy of your version of {\GAP}~4. This
 might be the `pkg' directory of the {\GAP}~4  home  directory;  it  is
 however also possible to keep an additional `pkg'  directory  in  your
