--- a/doc/install.tex
+++ b/doc/install.tex
@@ -111,7 +111,7 @@ gap> LoadPackage("ace");
 ---------------------------------------------------------------------------
 Loading    ACE (Advanced Coset Enumerator) 5.2
 GAP code by Greg Gamble <Greg.Gamble@uwa.edu.au> (address for correspondence)
-       Alexander Hulpke (http://www.math.colostate.edu/~hulpke)
+       Alexander Hulpke (https://www.math.colostate.edu/~hulpke)
            [uses ACE binary (C code program) version: 3.001]
 C code by  George Havas (http://staff.itee.uq.edu.au/havas)
            Colin Ramsay <cram@itee.uq.edu.au>
