--- a/doc/basics.tex
+++ b/doc/basics.tex
@@ -351,7 +351,7 @@ by  deleting  subgroup  generators  via  `ACEDeleteSubgroupGenerators'
 
 \atindex{lenlex standardisation scheme}{@\noexpand`lenlex' %
 standardisation scheme} 
-The default standardisation scheme for {\GAP} from {\GAP}~4.3 and  the
+The default standardisation scheme for {\GAP} and  the
 standardisation scheme provided by {\ACE} is the `lenlex'  scheme,  of
 Charles Sims~\cite{Sim94}. This scheme numbers cosets first  according
 to word-length and then according  to  a  lexical  ordering  of  coset
@@ -409,8 +409,7 @@ according to the `lenlex' scheme.
 
 \atindex{semilenlex standardisation scheme}{@\noexpand`semilenlex' %
 standardisation scheme}
-Another standardisation scheme for coset tables (the default scheme of
-versions of {\GAP} up to  {\GAP}~4.2),  numbers  cosets  according  to
+Another standardisation scheme for coset tables numbers cosets according to
 coset representative word-length in the group generators  and  lexical
 ordering  imposed  by  the  user-supplied  ordering   of   the   group
 generators; it is known as `semilenlex' since  though  like  `lenlex',
