--- a/doc/examples.tex
+++ b/doc/examples.tex
@@ -136,9 +136,7 @@ abbreviated. A  slightly  modified  version  of  this  example,  which
 includes  the  `echo'  option  is  available  on-line  via  `table  :=
 ACEExample("perf602p5");'. You may wish to peruse  the  notes  in  the
 `ACEExample' index first, however, by executing `ACEExample();'. (Note
-that the final table output here is `lenlex'  standardised  (the  case
-since {\GAP} 4.3); with {\GAP} 4.2 the final  table  was  `semilenlex'
-standardised.)
+that the final table output here is `lenlex'  standardised.)
 
 \beginexample
 gap> SetInfoACELevel(3);           # So we can see the progress messages
@@ -264,9 +262,7 @@ rec( index := 12, cputime := 0, cputimeUnits := "10^-2 seconds",
 
 Similarly, we may use `ACECosetTable' with 0 or 1 arguments, which  is
 the interactive version of `ACECosetTableFromGensAndRels',  and  which
-returns a standard table (since {\GAP} 4.3,  a  standard  table  is  a
-`lenlex' standard table;  with  {\GAP}  4.2,  it  was  a  `semilenlex'
-standard table).
+returns a standard table.
 
 \beginexample
 gap> ACECosetTable(); # Interactive version of ACECosetTableFromGensAndRels()
