--- a/doc/moreexamples.tex
+++ b/doc/moreexamples.tex
@@ -271,13 +271,7 @@ did that with the example above, the result would be an enormous table
 modestly sized partial table. Finally, we  will  use  `print  :=  -12'
 since it is a shorter equivalent alternative to `print :=  [-1,  12]'.
 Note that the output here was obtained with {\GAP}  4.3  (and  is  the
-same with {\GAP} 4.4). With {\GAP} 4.2 the output was  similar  except
-that the last `Info'-ed message (before the final output) states  that
-the coset table result is incomplete only, since no standardisation is
-done. It turns out that the table displayed via the `print' option  is
-already in `lenlex' standard form; so despite the differences  in  the
-{\GAP} versions, each version of {\GAP} since {\GAP}  4.2  has  output
-the same table.
+same with {\GAP} 4.4).
 
 *Note:* Sinec the order options are passed to {\ACE} behind the colon,
 has  not been honoured since {\GAP} 4.5 (at about the time {\ACE}  5.1
