--- a/doc/otheroptions.tex
+++ b/doc/otheroptions.tex
@@ -396,7 +396,7 @@ be allowed to `continue',  although  you  may  be  allowed  to  `redo'
 (see~"option start").
 
 *Note:* The {\ACE} standalone allows the option `continue',  but  this
-is (as of {\GAP} 4.3) a {\GAP} keyword, and so {\GAP} users  must  use
+is a {\GAP} keyword, and so {\GAP} users  must  use
 (mixed-case abbreviations of) `continu'.
 
 *INTERACTIVELY*, use `ACEContinue' (see~"ACEContinue").
