--- a/README
+++ b/README
@@ -11,30 +11,14 @@ from within GAP 4.
 The GAP  interface (package) has been  written by Alexander Hulpke  and Greg
 Gamble. In order  to install the ACE  package you must get  the archive file
 e.g. `ace-XXX.tar.gz', for some version  number `XXX', (which includes the C
-source code of Havas and Ramsay). The  current version of the ACE package is
-5.2 (which interfaces with  version 3.001 of the ACE C  program of Havas and
-Ramsay). This  version has mainly been  produced to include all  updates and
-have HTML  manual links that work  with the GAPDoc-compiled versions  of the
-main  GAP  4.7 manuals.  The  next  version ACE  5.3  will  fix a  bug  that
-eventuated at  the time of ACE  5.1 with changes  to GAP brought in  for GAP
-4.5: in order to  enforce the ordering of options put  to ACE functions, ACE
-exploited an undocumented feature of GAP  record fields: up to GAP 4.4 their
-ordering was fixed, but  since GAP 4.5 this has no longer  been the case. We
-may also migrate to GAPDoc generated manuals in ACE 5.3.
+source code of Havas and Ramsay).
 
 The ACE  package provides  a mechanism to  replace GAP's  usual Todd-Coxeter
 coset enumerator by ACE, so that  functions that behind the scenes use coset
 enumeration will use the ACE enumerator. The ACE enumerator may also be used
 explicitly; both non-interactively and interactively. However the package is
 used,  a plethora  of options  and strategies  are available  to assist  the
-user in  avoiding incomplete  coset enumerations. The  interactive functions
-provided  use  the  IOStream  functionality first  introduced  in  GAP  4.2;
-however, the current version requires at least GAP 4.4.
-
-Version 5.0 of ACE removed all deprecated code, particularly with respect to
-the package  loading mechanism. It  is not backward-compatible  with pre-4.4
-versions of GAP.  If you are still  using GAP 4.3, you must  continue to use
-the previous version (4.1) of ACE.
+user in  avoiding incomplete  coset enumerations.
 
 You can download  `ace-XXX.tar.gz'  (where  `XXX'  is  the  package  version
 number) from the home page for the ACE package
