--- a/doc/options.tex
+++ b/doc/options.tex
@@ -587,9 +587,8 @@ invoked, a side-effect is that any setting of the `asis'  (see~"option
 asis") option by the user is ignored.
 
 The  `lenlex'  standardisation  scheme  is  the  default  coset  table
-standardisation  scheme  of  {\GAP}  (since  version  4.3).   However,
-`semilenlex' was the standardisation scheme for versions of {\GAP}  up
-to {\GAP}~4.2. Both schemes are described in detail in  Section~"Coset
+standardisation  scheme  of  {\GAP}. Alternatively, `semilenlex' can
+be used. Both schemes are described in detail in  Section~"Coset
 Table Standardisation Schemes".
 
 \>`semilenlex'{option semilenlex}@{option `semilenlex'}& 
@@ -600,10 +599,6 @@ The `semilenlex' scheme, numbers cosets  in  such  a  way  that  their
 ``preferred'' (coset) representatives, in an  alphabet  consisting  of
 only the user-submitted generators, are  ordered  first  according  to
 `length' and then according to a `lexical' ordering.
-
-*Note:*
-Up to {\GAP}~4.2, `semilenlex' was the default standardisation  scheme
-used by {\GAP} (see also~"option lenlex").
 
 \>`incomplete'{option incomplete}@{option `incomplete'}& 
 Allows the return  of  an  `incomplete'  coset  table,  when  a  coset
@@ -616,13 +611,11 @@ raised  by  the  interface  to  {\GAP},  unless  the  option  `silent'
 case, a partial coset table, that is a valid {\GAP} list of lists,  is
 returned. Each position of the table  without  a  valid  coset  number
 entry is filled with a zero. If  the  option  `silent'  is  also  set,
-`incomplete'  prevails.  Since  {\GAP}~4.3,  an  incomplete  table  is
+`incomplete'  prevails.  An  incomplete  table  is
 returned reduced (i.e.~with  insignificant  coset  numbers  ---  those
 appearing only in their place of definition --- removed) and  `lenlex'
 standardised (regardless of whether  the  `semilenlex'  option  is  in
-force). (For GAP~4.2, an incomplete table was returned  unstandardised
-unless the `lenlex' option (see~"option lenlex") was also set, and the
-table was also not reduced.) When an incomplete table is  returned,  a
+force). When an incomplete table is  returned,  a
 warning is emitted at `InfoACE' or `InfoWarning' level 1.
 
 \>`aceinfile:=<filename>'{option aceinfile}@{option `aceinfile'}&
