Convert CHANGES and README to Markdown, unify history
In particular, remove the separate changes history from the manual, so that
now the CHANGES (resp. CHANGES.md) file is the unique reference for the
history of the package. That means we only need to change one place for
updates, and also people only have to check a single place to find out what
has changed.

Also update some statements in the README and point to the GitHub issue
tracker.

--- a/doc/install.tex
+++ b/doc/install.tex
@@ -95,7 +95,7 @@ obtained from  the different `make.xyz' and  will be used  to create a
 `Makefile'.)  You  can replace  the source by  a newer  version before
 compiling.
 
-If you encounter problems in installation please read the `README'.
+If you encounter problems in installation please read the file `README.md'.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \Section{Loading the ACE Package}
