--- a/doc/interact.tex
+++ b/doc/interact.tex
@@ -344,7 +344,7 @@ provided `ACEResurrectProcess' (see~"ACEResurrectProcess").
 The {\GAP} iostream of an interactive {\ACE} process will also die  if
 the {\ACE} binary has a segmentation fault. We do hope that this never
 happens to you, but if it does and the failure is  reproducible,  then
-it's a bug and we'd like to know about it. Please  read  the  `README'
+it's a bug and we'd like to know about it. Please read the file `README.md'
 that comes with the {\ACE} package to find out what to  include  in  a
 bug report and who to email it to.
 
