--- a/doc/install.tex
+++ b/doc/install.tex
@@ -112,7 +112,7 @@ GAP code by Greg Gamble <Greg.Gamble@uwa.edu.au> (address for correspondence)
            [uses ACE binary (C code program) version: 3.001]
 C code by  George Havas (http://staff.itee.uq.edu.au/havas)
            Colin Ramsay <cram@itee.uq.edu.au>
-Co-maintainer: Max Horn <max.horn@uni-siegen.de>
+Co-maintainer: Max Horn <horn@mathematik.uni-kl.de>
 
                  For help, type: ?ACE
 ---------------------------------------------------------------------------
