Fix building the manual

--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -128,19 +128,16 @@
   PAGES         = {19--25}
 }
 
-%% Already included in ../../../doc/manualbib.xml.bib 
-%% ... by removing the `at' symbol BibTeX sees the following as comments:
-%%
-%% INPROCEEDINGS{Hav91,
-%%   AUTHOR        = {George Havas},
-%%   TITLE         = {Coset enumeration strategies},
-%%   BOOKTITLE     = {ISSAC'91 (Proceedings of the 1991 International
-%%                         Symposium on Symbolic and Algebraic Computation)},
-%%   YEAR          = {1991},
-%%   EDITOR        = {Stephen M. Watt},
-%%   PAGES         = {191--199},
-%%   PUBLISHER     = {ACM Press}
-%% }
+@INPROCEEDINGS{Hav91,
+  AUTHOR        = {George Havas},
+  TITLE         = {Coset enumeration strategies},
+  BOOKTITLE     = {ISSAC'91 (Proceedings of the 1991 International
+                        Symposium on Symbolic and Algebraic Computation)},
+  YEAR          = {1991},
+  EDITOR        = {Stephen M. Watt},
+  PAGES         = {191--199},
+  PUBLISHER     = {ACM Press}
+}
 
 @BOOK{Pla92,
   AUTHOR        = {P.J. Plauger},
@@ -165,16 +162,13 @@
   YEAR          = {1999 (preprint)}
 }
 
-%% Already included in ../../../doc/manualbib.xml.bib 
-%% ... by removing the `at' symbol BibTeX sees the following as comments:
-%%
-%% MISC{HR99a,
-%%   AUTHOR        = {George Havas and Colin Ramsay},
-%%   TITLE         = {Coset enumeration: {\sf ACE} version 3},
-%%   YEAR          = {1999},
-%%   NOTE          = {{\sf ACE} version 3.001 is available from
-%%                    {\URL{http://www.csee.uq.edu.au/~cram/ce.html}}}
-%% }
+@MISC{HR99a,
+  AUTHOR        = {George Havas and Colin Ramsay},
+  TITLE         = {Coset enumeration: {\sf ACE} version 3},
+  YEAR          = {1999},
+  NOTE          = {{\sf ACE} version 3.001 is available from
+                   {\URL{http://www.csee.uq.edu.au/~cram/ce.html}}}
+}
 
 @MISC{HR99ace,
   AUTHOR        = {George Havas and Colin Ramsay},
@@ -262,19 +256,16 @@
   YEAR          = {1994}
 }
 
-%% Already included in ../../../doc/manualbib.xml.bib 
-%% ... by removing the `at' symbol BibTeX sees the following as comments:
-%%
-%% INCOLLECTION{Neu82,
-%%   AUTHOR        = {J. Neub\"{u}ser},
-%%   TITLE         = {An elementary introduction to coset table methods in
-%%                         computational group theory},
-%%   BOOKTITLE     = {Groups -- St. Andrews 1981},
-%%   SERIES        = {London Mathematical Society Lecture Note Series 71},
-%%   PUBLISHER     = {Cambridge University Press},
-%%   YEAR          = {1982},
-%%   PAGES         = {1--45}
-%% }
+@INCOLLECTION{Neu82,
+  AUTHOR        = {J. Neub\"{u}ser},
+  TITLE         = {An elementary introduction to coset table methods in
+                        computational group theory},
+  BOOKTITLE     = {Groups -- St. Andrews 1981},
+  SERIES        = {London Mathematical Society Lecture Note Series 71},
+  PUBLISHER     = {Cambridge University Press},
+  YEAR          = {1982},
+  PAGES         = {1--45}
+}
 
 @ARTICLE{Men64,
   AUTHOR        = {N.S. Mendelsohn},
@@ -405,16 +396,13 @@
   PAGES         = {15--27}
 }
 
-%% Already included in ../../../doc/manualbib.xml.bib 
-%% ... by removing the `at' symbol BibTeX sees the following as comments:
-%%
-%% BOOK{CLR90,
-%%   AUTHOR        = {Thomas H. Cormen and Charles E. Leiserson and Ronald
-%%                         L. Rivest},
-%%   TITLE         = {Introduction to Algorithms},
-%%   PUBLISHER     = {The MIT Press},
-%%   YEAR          = {1990}
-%% }
+@BOOK{CLR90,
+  AUTHOR        = {Thomas H. Cormen and Charles E. Leiserson and Ronald
+                        L. Rivest},
+  TITLE         = {Introduction to Algorithms},
+  PUBLISHER     = {The MIT Press},
+  YEAR          = {1990}
+}
 
 @BOOK{MKS76,
   AUTHOR        = {Wilhelm Magnus and Abraham Karrass and Daniel Solitar},
@@ -432,18 +420,15 @@
   YEAR          = {1972}
 }
 
-%% Already included in ../../../doc/manualbib.xml.bib 
-%% ... by removing the `at' symbol BibTeX sees the following as comments:
-%%
-%% TECHREPORT{Ram99,
-%%   AUTHOR        = {Colin Ramsay},
-%%   TITLE         = {{\sf ACE} for Amateurs (Version 3.001)},
-%%   INSTITUTION   = {Centre for Discrete Mathematics and Computing,
-%%                    The University of Queensland},
-%%   YEAR          = {1999},
-%%   NUMBER        = {14},
-%%   ADDRESS       = {St.~Lucia 4072, Australia}
-%% }
+@TECHREPORT{Ram99,
+  AUTHOR        = {Colin Ramsay},
+  TITLE         = {{\sf ACE} for Amateurs (Version 3.001)},
+  INSTITUTION   = {Centre for Discrete Mathematics and Computing,
+                   The University of Queensland},
+  YEAR          = {1999},
+  NUMBER        = {14},
+  ADDRESS       = {St.~Lucia 4072, Australia}
+}
 
 @TECHREPORT{Ram99ace,
   AUTHOR        = {Colin Ramsay},
