--- a/doc/install.tex
+++ b/doc/install.tex
@@ -106,7 +106,7 @@ This is done by calling
 \beginexample
 gap> LoadPackage("ace");
 ---------------------------------------------------------------------------
-Loading    ACE (Advanced Coset Enumerator) 5.3
+Loading    ACE (Advanced Coset Enumerator) 5.4
 GAP code by Greg Gamble <Greg.Gamble@uwa.edu.au> (address for correspondence)
        Alexander Hulpke (https://www.math.colostate.edu/~hulpke)
            [uses ACE binary (C code program) version: 3.001]
@@ -121,8 +121,8 @@ true
 \endexample
 
 \index{banner!suppression}
-The banner may be suppressed by providing the version string (`"5.3"')
-as second argument and `false' as third argument to the  `LoadPackage'
+The banner may be suppressed by providing `false' as second argument
+to the  `LoadPackage'
 command.    The    `LoadPackage'    command    is     described     in
 Section~"ref:LoadPackage" in the {\GAP} Reference Manual.
 
