adjust parising for ACEBinaryVersion, remove stat(istics)
statistics package was removed from ACE 4.

"options;" ACE command produces different output
in diffent state of the enumerator - perhaps, we can just
remove ACEBinaryVersion all together

--- a/doc/options.tex
+++ b/doc/options.tex
@@ -39,7 +39,7 @@ gap> RecNames(KnownACEOptions);
   "hlt", "hole", "lookahead", "loop", "mendelsohn", "messages", "monitor", 
   "mode", "nc", "no", "oo", "pmode", "psize", "sr", "print", "purec", 
   "purer", "rc", "recover", "contiguous", "rfactor", "rt", "row", "sc", 
-  "stabilising", "sims", "standard", "statistics", "stats", "style", "tw", 
+  "stabilising", "sims", "standard", "style", "tw",
   "trace", "workspace" ]
 
 \endexample
