remove ACEDumpVariables, as it relies on removed "dump" ACE command

--- a/doc/options.tex
+++ b/doc/options.tex
@@ -35,7 +35,7 @@ gap> RecNames(KnownACEOptions);
   "aceincomment", "aceexampleoptions", "lenlex", "semilenlex", "incomplete", 
   "sg", "rl", "aep", "ai", "ao", "aceoutfile", "asis", "bye", "exit", "qui", 
   "cc", "cfactor", "ct", "redo", "compaction", "continu", "dmode", "dsize", 
-  "dr", "dump", "easy", "echo", "enumeration", "felsch", "ffactor", "hard", 
+  "dr", "easy", "echo", "enumeration", "felsch", "ffactor", "hard", 
   "hlt", "hole", "lookahead", "loop", "mendelsohn", "messages", "monitor", 
   "mode", "nc", "no", "oo", "pmode", "psize", "sr", "print", "purec", 
   "purer", "rc", "recover", "contiguous", "rfactor", "rt", "row", "sc", 
