remote traces of host stuff from docs

--- a/doc/ace.tex
+++ b/doc/ace.tex
@@ -816,11 +816,10 @@ gap> SetInfoACELevel(3);
 
 \endexample
 
-enables the display of  all  of  the  output  from  {\ACE}  (including
-{\ACE}'s  banner,  containing  the  host  machine   information);   in
-particular,  the  progress  messages,  emitted  by  {\ACE}  when   the
-`messages' option (see~"option messages") is set to a non-zero  value,
-will be displayed via `Info'. Finally,
+enables the display of  all  of  the  output  from  {\ACE}  (including {\ACE}'s
+banner);   in particular,  the  progress  messages,  emitted  by  {\ACE}  when
+the `messages' option (see~"option messages") is set to a non-zero  value, will
+be displayed via `Info'. Finally,
 
 \beginexample
 gap> SetInfoACELevel(4);
