--- a/doc/messages.tex
+++ b/doc/messages.tex
@@ -120,8 +120,7 @@ which, in this case, declares a successful enumeration  of  the  coset
 numbers of a subgroup of index 12 within a group,  and,  as  it  turns
 out, values for the same statistics as the sample progress message.
 
-You should see all the above (and a little  more),  except  that  your
-dates and host information will no doubt differ, by running:
+You should see all the above (and a little  more) by running:
 
 \beginexample
 gap> ACEExample("A5-C5" : echo:=0, messages:=-1);
