--- a/doc/ace.tex
+++ b/doc/ace.tex
@@ -705,9 +705,7 @@ and~"ACEStart") processes;
 
 \quad`outfile'& the full path of the {\ACE} output file; and
 
-\quad`version'& the  version  of  the  current  {\ACE}  binary.   More
-detailed information regarding the compilation of the binary is  given
-by `ACEBinaryVersion' (see~"ACEBinaryVersion").
+\quad`version'& the  version  of  the  current  {\ACE}  binary.
 
 \enditems
 
@@ -886,8 +884,7 @@ Standardisation Schemes").
 \>ACEPackageVersion() F
 
 gives the current version of the {\ACE} Package (i.e.~the {\GAP}  code
-component; the  function  `ACEBinaryVersion'  (see~"ACEBinaryVersion")
-gives details of the C code compilation).
+component.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%
