--- a/doc/options.tex
+++ b/doc/options.tex
@@ -33,7 +33,7 @@ gap> RecNames(KnownACEOptions);
   "system", "silent", "time", "begin", "text", "options", "fill", 
   "aceinfile", "aceignore", "aceignoreunknown", "acenowarnings", "aceecho", 
   "aceincomment", "aceexampleoptions", "lenlex", "semilenlex", "incomplete", 
-  "sg", "rl", "aep", "ai", "ao", "aceoutfile", "asis", "bye", "exit", "qui", 
+  "sg", "rl", "aep", "asis", "bye", "exit", "qui", 
   "cc", "cfactor", "ct", "redo", "compaction", "continu", "dmode", "dsize", 
   "dr", "easy", "echo", "enumeration", "felsch", "ffactor", "hard", 
   "hlt", "hole", "lookahead", "loop", "mendelsohn", "messages", "monitor", 
@@ -155,7 +155,7 @@ Options  for each of  the       {\ACE}       interface       functions
 `ACECosetTableFromGensAndRels',   `ACECosetTable',   `ACEStats'    and
 `ACEStart' (see  Chapter~"Functions  for  Using  ACE  Interactively"),
 comprise the few  non-{\ACE}-binary  options  (`silent',  `aceinfile',
-`aceoutfile',   `aceignore',   `aceignoreunknown',    `acenowarnings',
+`aceignore',   `aceignoreunknown',    `acenowarnings',
 `aceincomment',     `aceecho'     and     `echo')     discussed     in
 Section "Non-ACE-binary  Options",  (almost)  all  single-word  {\ACE}
 binary options and  `purer'  and  `purec'.  The  options  `purer'  and
@@ -631,13 +631,6 @@ directly with the {\ACE} standalone. The full path to the  input  file
 normally used by {\ACE} (i.e.~when option `aceinfile' is not used)  is
 stored in `ACEData.infile'.
 
-
-\>`aceoutfile:=<filename>'{option aceoutfile}@{option `aceoutfile'}&
-Redirects {\ACE} output to file <filename>;  <filename>  should  be  a
-string. (Shortest abbreviation: `aceo'.)
-
-This  is  actually  a  synonym  for  the  `ao'  option.  Please  refer
-to~"option ao", for further discussion of this option.
 
 \>`aceignore:=<optionList>'{option aceignore}@{option `aceignore'}&
 Directs an {\ACE} function to  ignore  the  options  in  <optionList>;
@@ -1264,8 +1257,7 @@ it on unless you really need it.
 
 Note   that,  ordinarily,  one   will   not   see   these    messages:
 non-interactively,   these   messages    are    directed    to    file
-`ACEData.outfile'   (or   <filename>,   if   option   `aceoutfile   :=
-<filename>', or `ao := <filename>', is used), and interactively  these
+`ACEData.outfile', and interactively  these
 messages are simply  not  displayed.  However,  one  can  change  this
 situation both interactively and   non-interactively  by  setting  the
 `InfoLevel' of `InfoACE' to 3 via
@@ -1304,33 +1296,6 @@ Sets the `Subgroup Name' to <string>; <string> must  of  course  be  a
 string. (Shortest abbreviation: `subg'.)
 
 The default `Subgroup Name' is `"H"'.
-
-\enditems
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\Section{Options for redirection of ACE Output}
-
-\beginitems
-
-\>`ao:=<filename>'{option ao}@{option `ao'}
-\>`aceoutfile:=<filename>'{option aceoutfile!ao synonym}@{option `aceoutfile'}&
-Redirects (`a'lters) `o'utput to <filename>; <filename>  should  be  a
-string.
-
-Non-interactively, output from {\ACE} is normally directed to a temporary
-file whose full path is stored in `ACEData.outfile', which  is  parsed
-to produce a coset table or a list of statistics. This  option  causes
-{\ACE}'s output to  be  directed  to  <filename>  instead,  presumably
-because the user wishes to see (and keep) data output  by  the  {\ACE}
-binary,    other    than    the    coset     table     output     from
-`ACECosetTableFromGensAndRels' or the statistics output by `ACEStats'.
-Please refer to Appendix~"The  Meanings  of  ACE's  output  messages",
-where we discuss the meaning of the additional data to be found in the
-{\ACE} binary's output. The option `aceoutfile' is a {\GAP}-introduced
-synonym for `ao', that is translated to `ao' before submission to  the
-{\ACE} binary.  Do  not  use  option  `aceoutfile'  when  running  the
-standalone directly. Happily, `ao' can also be regarded as  mnemonical
-for `aceoutfile'.
 
 \enditems
 
